# Tweets_Popularity_Prediction

./: .demo.sh.swp  CMakeLists.txt  README.md  cascade_size_alert_receiver.py  demo.sh  demo_quentin.sh  hawkes_params_fitter.py  hawkes_params_fitter_v1.py  hawkes_process_training.py  kafka_config.py  random_forest_consumer.py  random_forest_trainer.py  requirements.txt  test_consumer.cpp  test_producer.cpp  tweets_data_reader.py
Python/: Hawkes_process.ipynb  Hawkes_process_Ipopt.py  Hawkes_process_RandomForest.py  Hawkes_process_Scipy.py  example_book.csv  twitter_API_scrap.py
Python/.ipynb_checkpoints/: Hawkes_process-checkpoint.ipynb
RF_model/: RF_model.pickle  flask_app.py  performance_random_forest_model.py  random_forest_model.py  test_flask_RF.py  training_data_RF.csv  training_data_random_forest.py
Tweets/: processTweets.py
Tweets/10-min/: 00.json.bz2  01.json.bz2  02.json.bz2  03.json.bz2  04.json.bz2  05.json.bz2  06.json.bz2  07.json.bz2  08.json.bz2  09.json.bz2  test.json
data/rf_train/: training_data_rf.csv
hawkes_point_process/: marked_hawkes.py  marked_hawkes_point_process.ipynb  test_ipopt.py  training_data.csv  training_data_RF.csv  training_data_random_forest.py
hawkes_point_process/.ipynb_checkpoints/: Assesment_Loan default-checkpoint.ipynb  marked_hawkes_point_process-checkpoint.ipynb
